# nsg

./: .gitignore  CMakeLists.txt  cmake-variants.sample.yaml  vcpkg.json
include/efanna2e/: distance.h  index_nsg.h  parameters.h  util.h
src/: CMakeLists.txt  index_nsg.cpp
tests/: CMakeLists.txt  test_nsg_index_sift1m.cpp  test_nsg_index_sift1m_evaluation.cpp  test_nsg_index_sift1m_stats.cpp
